--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: crete dist
-        run: cd docs && npm install && npm run docs:build
+        run: cd docs && pnpm install && pnpm run docs:build
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Upload artifact
