--- a/docs/package.json
+++ b/docs/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "dev": "vite",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "docs:dev": "vitepress dev .",
-    "docs:build": "vitepress build .",
-    "docs:serve": "vitepress serve ."
+    "dev:docs": "vitepress dev .",
+    "build:docs": "vitepress build .",
+    "serve:docs": "vitepress serve ."
   },
   "keywords": [],
   "author": "",
