--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: crete dist
-        run: npm install pnpm -g && cd docs && pnpm install && pnpm run docs:build
+        run: npm install pnpm -g && cd docs && pnpm install && pnpm run build:docs
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Upload artifact
