--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -2,14 +2,12 @@
   "name": "@TUI/components",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
+  "module": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@TUI/utils": "workspace:*"
-  }
+  "license": "ISC"
 }
