--- a/docs/package.json
+++ b/docs/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "vite",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:docs": "vitepress dev .",
-    "build:docs": "vitepress build .",
-    "serve:docs": "vitepress serve ."
+    "docs:dev": "vitepress dev .",
+    "docs:build": "vitepress build .",
+    "docs:serve": "vitepress serve ."
   },
   "keywords": [],
   "author": "",
@@ -17,8 +16,5 @@
     "@vitejs/plugin-vue": "^3.2.0",
     "vite": "^3.2.0",
     "vitepress": "1.0.0-alpha.26"
-  },
-  "dependencies": {
-    "@TUI/components": "workspace:^1.0.0"
   }
 }
