--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   ],
   "author": "yty",
   "dependencies": {
-    "@TUI/components": "workspace:^1.0.0",
-    "@TUI/utils": "workspace:^1.0.0",
+    "@t-ui/components": "workspace:^1.0.0",
+    "@t-ui/utils": "workspace:^1.0.0",
     "TUI": "workspace:^0.0.1"
   },
   "devDependencies": {
