--- a/packages/TUI/package.json
+++ b/packages/TUI/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "t-ui",
+  "name": "t-ui-core",
   "version": "0.0.1",
   "description": "TUI组件库",
-  "main": "lib/index.umd.js",
-  "module": "es/index.mjs",
+  "main": "dist/lib/index.umd.js",
+  "module": "dist/es/index.mjs",
   "files": ["dist"],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,6 +13,15 @@
     "t-ui",
     "vue3"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/html5BigBrother/TUI"
+  },
+  "homepage": "https://html5bigbrother.github.io/TUI/",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "author": "yty",
   "license": "MIT",
   "devDependencies": {
