--- a/packages/t-ui/package.json
+++ b/packages/t-ui/package.json
@@ -1,10 +1,12 @@
 {
   "name": "t-ui-core",
-  "version": "0.0.2",
+  "version": "1.0.0",
   "description": "TUI组件库",
   "main": "dist/lib/index.umd.js",
   "module": "dist/es/index.mjs",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "vue-tsc --noEmit && vite build"
