--- a/packages/t-ui/package.json
+++ b/packages/t-ui/package.json
@@ -27,6 +27,10 @@
   },
   "author": "yty",
   "license": "MIT",
+  "dependencies": {
+    "@t-ui/components": "workspace:*",
+    "@t-ui/utils": "workspace:*"
+  },
   "devDependencies": {
     "vue-tsc": "^0.40.4",
     "@vitejs/plugin-vue": "^3.1.0",
