feat: 修改发布工作流

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -6,6 +6,6 @@
   "ignore": [],
   "linked": [],
   "access": "public",
-  "baseBranch": "feature/test",
+  "baseBranch": "feature/gulp",
   "updateInternalDependencies": "patch"
 }
