--- a/package.json
+++ b/package.json
@@ -2,24 +2,24 @@
   "name": "TUI-repo",
   "description": "TUI组件库工程",
   "author": "yty",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "docs:dev": "pnpm run -C docs docs:dev",
     "docs:build": "pnpm run -C docs docs:build",
     "docs:serve": "pnpm run -C docs docs:serve",
-    "build": "pnpm run -C packages/t-ui build",
-    "release": "pnpm changeset && pnpm changeset version && pnpm changeset publish"
+    "release": "node ./scripts/release.mjs"
   },
   "dependencies": {
     "@t-ui/components": "workspace:*",
     "@t-ui/utils": "workspace:*",
-    "t-ui-core": "workspace:*"
+    "t-ui-core": "workspace:*",
+    "vite": "^3.1.0"
   },
   "devDependencies": {
     "@changesets/cli": "^2.25.2",
     "less": "^4.1.3",
     "typescript": "^4.8.4",
-    "vite": "^3.2.0",
     "vue": "^3.2.36"
   },
   "engines": {
