feat: 接入gulp，任务化管理构建流程

--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "TUI-repo",
   "description": "TUI组件库工程",
   "author": "yty",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "docs:dev": "pnpm run -C docs docs:dev",
     "docs:build": "pnpm run -C docs docs:build",
     "docs:serve": "pnpm run -C docs docs:serve",
-    "release": "node ./scripts/release.mjs"
+    "release": "gulp release"
   },
   "dependencies": {
     "@t-ui/components": "workspace:*",
@@ -18,6 +17,8 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.25.2",
+    "gulp": "^4.0.2",
+    "gulp-cli": "^2.3.0",
     "less": "^4.1.3",
     "typescript": "^4.8.4",
     "vue": "^3.2.36"
