feat: 组件库增加声明

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -6,6 +6,6 @@
   "ignore": [],
   "linked": [],
   "access": "public",
-  "baseBranch": "feature/gulp",
+  "baseBranch": "master",
   "updateInternalDependencies": "patch"
 }
