--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dist/lib/index.umd.js",
   "module": "dist/es/index.mjs",
+  "types": "dist/types/index.d.ts",
   "files": [
     "dist"
   ],
@@ -28,10 +29,11 @@
   "author": "yty",
   "license": "MIT",
   "devDependencies": {
-    "vue-tsc": "^0.40.4",
     "@vitejs/plugin-vue": "^3.1.0",
     "sass": "^1.54.9",
-    "vite": "^3.1.0"
+    "vite": "^3.1.0",
+    "vite-plugin-dts": "^1.6.6",
+    "vue-tsc": "^0.40.4"
   },
   "peerDependencies": {
     "vue": "^3.2.37"
