--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -9,7 +9,8 @@
     "dist"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
     "build": "vue-tsc --noEmit && vite build"
   },
   "keywords": [
@@ -30,9 +31,13 @@
   "license": "MIT",
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
+    "@vitest/coverage-c8": "^0.24.5",
+    "@vue/test-utils": "^2.2.1",
+    "happy-dom": "^7.6.6",
     "sass": "^1.54.9",
     "vite": "^3.1.0",
     "vite-plugin-dts": "^1.6.6",
+    "vitest": "^0.24.5",
     "vue-tsc": "^0.40.4"
   },
   "peerDependencies": {
