--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "docs:dev": "pnpm run -C docs docs:dev",
     "docs:build": "pnpm run -C docs docs:build",
     "docs:serve": "pnpm run -C docs docs:serve",
+    "test:components": "pnpm run -C packages/components test",
+    "coverage:components": "pnpm run -C packages/components coverage",
     "release": "gulp release"
   },
   "dependencies": {
